--- a/src/styles/bookmark.css
+++ b/src/styles/bookmark.css
@@ -1,8 +1,7 @@
 header{
     background-color: cadetblue;
-    margin:0px;
-    padding:15px;
-    width:95em;
+    margin:0%;
+    padding:2%;
 }
 a {
     color: black;
@@ -21,10 +20,10 @@ ul{
 
 li{
     display:inline;
-    margin-right:20px;
+    margin-right:1.5%;
 }
 
 button{
     float: right;
-    margin-right: 15px;
+    margin-right: 1.5%;
 }
