--- a/src/styles/bookmark.css
+++ b/src/styles/bookmark.css
@@ -2,6 +2,8 @@ header{
     background-color: cadetblue;
     margin:0%;
     padding:2%;
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 a {
     color: black;
