--- a/src/styles/sites.css
+++ b/src/styles/sites.css
@@ -31,3 +31,10 @@ h2,h3{
 p{
     margin-left:1%;
 }
+.filter-search label, input{
+    font-size: 2em;
+}
+.filter-search button{
+    font-size: 1.5em;
+    background-color: #242424;
+}
